# snout

./: Cargo.toml  README.md  TASK.md
.github/workflows/: ci.yml  release.yml
snout-bin/: PKGBUILD
src/: config.rs  custom.rs  feedback.rs  i18n.rs  main.rs  types.rs
src/api/: cnb.rs  download.rs  github.rs  mod.rs  releases.rs
src/deployer/: mod.rs
src/detector/: mod.rs
src/fileutil/: download.rs  extract.rs  hash.rs  mod.rs
src/skin/: builtin.rs  fcitx5.rs  mod.rs  patch.rs
src/ui/: app.rs  config_logic.rs  config_view.rs  mod.rs  style.rs  update_view.rs  wizard.rs
src/updater/: base.rs  dict.rs  frost.rs  ice.rs  mint.rs  mod.rs  model.rs  model_patch.rs  scheme.rs  wanxiang.rs
