[package]
name = "snout"
version = "0.1.5"
edition = "2021"
description = "Rime input method init and update tool with Wanxiang, Ice, Frost, and Mint support"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
zip = "4"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
